--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,4 +50,15 @@
         <item name="android:orientation">vertical</item>
     </style>
 
+    <style name="MyAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the buttons -->
+        <item name="colorAccent">@color/colorAccent</item>
+        <!-- Used for the title and text -->
+        <item name="android:textColorPrimary">@color/backgroundColorWhite</item>
+        <!-- List items -->
+        <item name="textColorAlertDialogListItem">@color/backgroundColorWhite</item>
+        <!-- Used for the background -->
+        <item name="android:background">@color/grey_850</item>
+    </style>
+
 </resources>
