--- a/app/src/main/res/layout/verbs_card_item.xml
+++ b/app/src/main/res/layout/verbs_card_item.xml
@@ -40,161 +40,45 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/infinitive"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
-                    android:paddingLeft="2dp"
-                    android:paddingRight="2dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    tools:text="misunderstand"/>
-
-                <TextView
-                    android:id="@+id/simple_past"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
-                    android:paddingLeft="2dp"
-                    android:paddingRight="2dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    tools:text="misunderstood"/>
-
-                <TextView
-                    android:id="@+id/past_participle"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
-                    android:paddingLeft="2dp"
-                    android:paddingRight="2dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    tools:text="misunderstood"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/phonetic_infinitive"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
-                    android:paddingLeft="2dp"
-                    android:paddingRight="2dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    tools:text="/'mɪsʌndə'stænd/"/>
-
-                <TextView
-                    android:id="@+id/phonetic_simple_past"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
-                    android:paddingLeft="2dp"
-                    android:paddingRight="2dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    tools:text="/'mɪsʌndə'stʊd/"/>
-
-                <TextView
-                    android:id="@+id/phonetic_past_participle"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
-                    android:paddingLeft="2dp"
-                    android:paddingRight="2dp"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    tools:text="/'mɪsʌndə'stʊd/"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
                 <LinearLayout
                     android:id="@+id/play_infinitive"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_width="0dp"
                     android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
                     android:layout_marginStart="2dp"
                     android:layout_marginEnd="2dp"
                     android:layout_marginLeft="2dp"
                     android:layout_marginRight="2dp"
+                    android:gravity="center_horizontal"
                     android:background="@drawable/touch_effect"
                     android:clickable="true">
-                    <ImageView
+                    <!-- <ImageView
                         android:contentDescription="@string/play"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:scaleType="centerInside"
                         android:layout_gravity="center"
                         app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
+                        -->
+                    <TextView
+                        android:id="@+id/infinitive"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="1dp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                        tools:text="savoir"/>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/play_simple_past"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                <TextView
+                    android:id="@+id/groupe"
+                    android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginEnd="2dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginRight="2dp"
-                    android:background="@drawable/touch_effect"
-                    android:clickable="true">
-                    <ImageView
-                        android:contentDescription="@string/play"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="centerInside"
-                        android:layout_gravity="center"
-                        app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/play_past_participle"
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginEnd="2dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginRight="2dp"
-                    android:background="@drawable/touch_effect"
-                    android:clickable="true">
-                    <ImageView
-                        android:contentDescription="@string/play"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:scaleType="centerInside"
-                        android:layout_gravity="center"
-                        app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
-                </LinearLayout>
-
+                    android:gravity="center_horizontal"
+                    android:layout_marginBottom="1dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                    tools:text="3rd groiup"/>
             </LinearLayout>
 
             <LinearLayout
@@ -260,7 +144,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        tools:text="not understand something; to assume wrong"/>
+                        tools:text="Avoir la connaissance de, posséder une science ou un art. Pouvoir, avoir la possibilité de. Être apte à, avoir le talent, la force de faire quelque chose. Connaître l’existence de. Connaître sa situation. Être su."/>
 
                 </LinearLayout>
 
@@ -302,7 +186,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        tools:text="I did misunderstand you yesteraday. Sorry!"/>
+                        tools:text="Elle sait répartir les tâches, tu sais écouter."/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -335,7 +219,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        tools:text="What? misunderstood! I can't belive it."/>
+                        tools:text="Il sait une petite clairière dans la forêt."/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -368,7 +252,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        tools:text="If I had misunderstood you, I would had travel to the wrong country."/>
+                        tools:text="Je saurai terminer ce long travail."/>
                 </LinearLayout>
 
             </LinearLayout>
