Add some verb conjugations

--- a/app/src/main/res/xml/conjugations.xml
+++ b/app/src/main/res/xml/conjugations.xml
@@ -3935,212 +3935,212 @@
         id          = "41"
         term        = ""
         inf_pr      = "voir"
-        inf_pa      = ""
-        pa_pr       = ""
-        pa_pa1      = ""
-        pa_pa2      = ""
-        ge_pr       = ""
-        ge_pa       = ""
-        im_pr_t     = ""
-        im_pr_n     = ""
-        im_pr_v     = ""
-        im_pa_t     = ""
-        im_pa_n     = ""
-        im_pa_v     = ""
+        inf_pa      = "avoir vu"
+        pa_pr       = "voyant"
+        pa_pa1      = "vu (u, ue, us, ues)"
+        pa_pa2      = "ayant vu"
+        ge_pr       = "en voyant"
+        ge_pa       = "en ayant vu"
+        im_pr_t     = "vois"
+        im_pr_n     = "voyons"
+        im_pr_v     = "voyez"
+        im_pa_t     = "aie vu"
+        im_pa_n     = "ayons vu"
+        im_pa_v     = "ayez vu"
 
-        in_pr_j     = ""
-        in_pr_t     = ""
-        in_pr_il    = ""
-        in_pr_n     = ""
-        in_pr_v     = ""
-        in_pr_ils   = ""
-        in_pc_j     = ""
-        in_pc_t     = ""
-        in_pc_il    = ""
-        in_pc_n     = ""
-        in_pc_v     = ""
-        in_pc_ils   = ""
-        in_im_j     = ""
-        in_im_t     = ""
-        in_im_il    = ""
-        in_im_n     = ""
-        in_im_v     = ""
-        in_im_ils   = ""
-        in_pqp_j    = ""
-        in_pqp_t    = ""
-        in_pqp_il   = ""
-        in_pqp_n    = ""
-        in_pqp_v    = ""
-        in_pqp_ils  = ""
-        in_ps_j     = ""
-        in_ps_t     = ""
-        in_ps_il    = ""
-        in_ps_n     = ""
-        in_ps_v     = ""
-        in_ps_ils   = ""
-        in_pa_j     = ""
-        in_pa_t     = ""
-        in_pa_il    = ""
-        in_pa_n     = ""
-        in_pa_v     = ""
-        in_pa_ils   = ""
-        in_fs_j     = ""
-        in_fs_t     = ""
-        in_fs_il    = ""
-        in_fs_n     = ""
-        in_fs_v     = ""
-        in_fs_ils   = ""
-        in_fa_j     = ""
-        in_fa_t     = ""
-        in_fa_il    = ""
-        in_fa_n     = ""
-        in_fa_v     = ""
-        in_fa_ils   = ""
+        in_pr_j     = "vois"
+        in_pr_t     = "vois"
+        in_pr_il    = "voit"
+        in_pr_n     = "voyons"
+        in_pr_v     = "voyez"
+        in_pr_ils   = "voient"
+        in_pc_j     = "ai vu"
+        in_pc_t     = "as vu"
+        in_pc_il    = "a vu"
+        in_pc_n     = "avons vu"
+        in_pc_v     = "avez vu"
+        in_pc_ils   = "ont vu"
+        in_im_j     = "voyais"
+        in_im_t     = "voyais"
+        in_im_il    = "voyait"
+        in_im_n     = "voyions"
+        in_im_v     = "voyiez"
+        in_im_ils   = "voyaient"
+        in_pqp_j    = "avais vu"
+        in_pqp_t    = "avais vu"
+        in_pqp_il   = "avait vu"
+        in_pqp_n    = "avions vu"
+        in_pqp_v    = "aviez vu"
+        in_pqp_ils  = "avaient vu"
+        in_ps_j     = "vis"
+        in_ps_t     = "vis"
+        in_ps_il    = "vit"
+        in_ps_n     = "vîmes"
+        in_ps_v     = "vîtes"
+        in_ps_ils   = "virent"
+        in_pa_j     = "eus vu"
+        in_pa_t     = "eus vu"
+        in_pa_il    = "eut vu"
+        in_pa_n     = "eûmes vu"
+        in_pa_v     = "eûtes vu"
+        in_pa_ils   = "eurent vu"
+        in_fs_j     = "verrai"
+        in_fs_t     = "verras"
+        in_fs_il    = "verra"
+        in_fs_n     = "verrons"
+        in_fs_v     = "verrez"
+        in_fs_ils   = "verront"
+        in_fa_j     = "aurai vu"
+        in_fa_t     = "auras vu"
+        in_fa_il    = "aura vu"
+        in_fa_n     = "aurons vu"
+        in_fa_v     = "aurez vu"
+        in_fa_ils   = "auront vu"
 
-        su_pr_j     = ""
-        su_pr_t     = ""
-        su_pr_il    = ""
-        su_pr_n     = ""
-        su_pr_v     = ""
-        su_pr_ils   = ""
-        su_pa_j     = ""
-        su_pa_t     = ""
-        su_pa_il    = ""
-        su_pa_n     = ""
-        su_pa_v     = ""
-        su_pa_ils   = ""
-        su_im_j     = ""
-        su_im_t     = ""
-        su_im_il    = ""
-        su_im_n     = ""
-        su_im_v     = ""
-        su_im_ils   = ""
-        su_pqp_j    = ""
-        su_pqp_t    = ""
-        su_pqp_il   = ""
-        su_pqp_n    = ""
-        su_pqp_v    = ""
-        su_pqp_ils  = ""
+        su_pr_j     = "voie"
+        su_pr_t     = "voies"
+        su_pr_il    = "voie"
+        su_pr_n     = "voyions"
+        su_pr_v     = "voyiez"
+        su_pr_ils   = "voient"
+        su_pa_j     = "aie vu"
+        su_pa_t     = "aies vu"
+        su_pa_il    = "ait vu"
+        su_pa_n     = "ayons vu"
+        su_pa_v     = "ayez vu"
+        su_pa_ils   = "aient vu"
+        su_im_j     = "visse"
+        su_im_t     = "visses"
+        su_im_il    = "vît"
+        su_im_n     = "vissions"
+        su_im_v     = "vissiez"
+        su_im_ils   = "vissent"
+        su_pqp_j    = "eusse vu"
+        su_pqp_t    = "eusses vu"
+        su_pqp_il   = "eût vu"
+        su_pqp_n    = "eussions vu"
+        su_pqp_v    = "eussiez vu"
+        su_pqp_ils  = "eussent vu"
 
-        co_pr_j     = ""
-        co_pr_t     = ""
-        co_pr_il    = ""
-        co_pr_n     = ""
-        co_pr_v     = ""
-        co_pr_ils   = ""
-        co_pa_j     = ""
-        co_pa_t     = ""
-        co_pa_il    = ""
-        co_pa_n     = ""
-        co_pa_v     = ""
-        co_pa_ils   = "" />
+        co_pr_j     = "verrais"
+        co_pr_t     = "verrais"
+        co_pr_il    = "verrait"
+        co_pr_n     = "verrions"
+        co_pr_v     = "verriez"
+        co_pr_ils   = "verraient"
+        co_pa_j     = "aurais vu"
+        co_pa_t     = "aurais vu"
+        co_pa_il    = "aurait vu"
+        co_pa_n     = "aurions vu"
+        co_pa_v     = "auriez vu"
+        co_pa_ils   = "auraient vu" />
     <conjugation
         id          = "42"
         term        = ""
-        inf_pr      = ""
-        inf_pa      = ""
-        pa_pr       = ""
-        pa_pa1      = ""
-        pa_pa2      = ""
-        ge_pr       = ""
-        ge_pa       = ""
-        im_pr_t     = ""
-        im_pr_n     = ""
-        im_pr_v     = ""
-        im_pa_t     = ""
-        im_pa_n     = ""
-        im_pa_v     = ""
+        inf_pr      = "pourvoir"
+        inf_pa      = "avoir pourvu"
+        pa_pr       = "pourvoyant"
+        pa_pa1      = "pourvu (u, ue, us, ues)"
+        pa_pa2      = "ayant pourvu"
+        ge_pr       = "en pourvoyant"
+        ge_pa       = "en ayant pourvu"
+        im_pr_t     = "pourvois"
+        im_pr_n     = "pourvoyons"
+        im_pr_v     = "pourvoyez"
+        im_pa_t     = "aie pourvu"
+        im_pa_n     = "ayons pourvu"
+        im_pa_v     = "ayez pourvu"
 
-        in_pr_j     = ""
-        in_pr_t     = ""
-        in_pr_il    = ""
-        in_pr_n     = ""
-        in_pr_v     = ""
-        in_pr_ils   = ""
-        in_pc_j     = ""
-        in_pc_t     = ""
-        in_pc_il    = ""
-        in_pc_n     = ""
-        in_pc_v     = ""
-        in_pc_ils   = ""
-        in_im_j     = ""
-        in_im_t     = ""
-        in_im_il    = ""
-        in_im_n     = ""
-        in_im_v     = ""
-        in_im_ils   = ""
-        in_pqp_j    = ""
-        in_pqp_t    = ""
-        in_pqp_il   = ""
-        in_pqp_n    = ""
-        in_pqp_v    = ""
-        in_pqp_ils  = ""
-        in_ps_j     = ""
-        in_ps_t     = ""
-        in_ps_il    = ""
-        in_ps_n     = ""
-        in_ps_v     = ""
-        in_ps_ils   = ""
-        in_pa_j     = ""
-        in_pa_t     = ""
-        in_pa_il    = ""
-        in_pa_n     = ""
-        in_pa_v     = ""
-        in_pa_ils   = ""
-        in_fs_j     = ""
-        in_fs_t     = ""
-        in_fs_il    = ""
-        in_fs_n     = ""
-        in_fs_v     = ""
-        in_fs_ils   = ""
-        in_fa_j     = ""
-        in_fa_t     = ""
-        in_fa_il    = ""
-        in_fa_n     = ""
-        in_fa_v     = ""
-        in_fa_ils   = ""
+        in_pr_j     = "pourvois"
+        in_pr_t     = "pourvois"
+        in_pr_il    = "pourvoit"
+        in_pr_n     = "pourvoyons"
+        in_pr_v     = "pourvoyez"
+        in_pr_ils   = "pourvoient"
+        in_pc_j     = "ai pourvu"
+        in_pc_t     = "as pourvu"
+        in_pc_il    = "a pourvu"
+        in_pc_n     = "avons pourvu"
+        in_pc_v     = "avez pourvu"
+        in_pc_ils   = "ont pourvu"
+        in_im_j     = "pourvoyais"
+        in_im_t     = "pourvoyais"
+        in_im_il    = "pourvoyait"
+        in_im_n     = "pourvoyions"
+        in_im_v     = "pourvoyiez"
+        in_im_ils   = "pourvoyaient"
+        in_pqp_j    = "avais pourvu"
+        in_pqp_t    = "avais pourvu"
+        in_pqp_il   = "avait pourvu"
+        in_pqp_n    = "avions pourvu"
+        in_pqp_v    = "aviez pourvu"
+        in_pqp_ils  = "avaient pourvu"
+        in_ps_j     = "pourvus"
+        in_ps_t     = "pourvus"
+        in_ps_il    = "pourvut"
+        in_ps_n     = "pourvûmes"
+        in_ps_v     = "pourvûtes"
+        in_ps_ils   = "pourvurent"
+        in_pa_j     = "eus pourvu"
+        in_pa_t     = "eus pourvu"
+        in_pa_il    = "eut pourvu"
+        in_pa_n     = "eûmes pourvu"
+        in_pa_v     = "eûtes pourvu"
+        in_pa_ils   = "eurent pourvu"
+        in_fs_j     = "pourvoirai"
+        in_fs_t     = "pourvoiras"
+        in_fs_il    = "pourvoira"
+        in_fs_n     = "pourvoirons"
+        in_fs_v     = "pourvoirez"
+        in_fs_ils   = "pourvoiront"
+        in_fa_j     = "aurai pourvu"
+        in_fa_t     = "auras pourvu"
+        in_fa_il    = "aura pourvu"
+        in_fa_n     = "aurons pourvu"
+        in_fa_v     = "aurez pourvu"
+        in_fa_ils   = "auront pourvu"
 
-        su_pr_j     = ""
-        su_pr_t     = ""
-        su_pr_il    = ""
-        su_pr_n     = ""
-        su_pr_v     = ""
-        su_pr_ils   = ""
-        su_pa_j     = ""
-        su_pa_t     = ""
-        su_pa_il    = ""
-        su_pa_n     = ""
-        su_pa_v     = ""
-        su_pa_ils   = ""
-        su_im_j     = ""
-        su_im_t     = ""
-        su_im_il    = ""
-        su_im_n     = ""
-        su_im_v     = ""
-        su_im_ils   = ""
-        su_pqp_j    = ""
-        su_pqp_t    = ""
-        su_pqp_il   = ""
-        su_pqp_n    = ""
-        su_pqp_v    = ""
-        su_pqp_ils  = ""
+        su_pr_j     = "pourvoie"
+        su_pr_t     = "pourvoies"
+        su_pr_il    = "pourvoie"
+        su_pr_n     = "pourvoyions"
+        su_pr_v     = "pourvoyiez"
+        su_pr_ils   = "pourvoient"
+        su_pa_j     = "aie pourvu"
+        su_pa_t     = "aies pourvu"
+        su_pa_il    = "ait pourvu"
+        su_pa_n     = "ayons pourvu"
+        su_pa_v     = "ayez pourvu"
+        su_pa_ils   = "aient pourvu"
+        su_im_j     = "pourvusse"
+        su_im_t     = "pourvusses"
+        su_im_il    = "pourvût"
+        su_im_n     = "pourvussions"
+        su_im_v     = "pourvussiez"
+        su_im_ils   = "pourvussent"
+        su_pqp_j    = "eusse pourvu"
+        su_pqp_t    = "eusses pourvu"
+        su_pqp_il   = "eût pourvu"
+        su_pqp_n    = "eussions pourvu"
+        su_pqp_v    = "eussiez pourvu"
+        su_pqp_ils  = "eussent pourvu"
 
-        co_pr_j     = ""
-        co_pr_t     = ""
-        co_pr_il    = ""
-        co_pr_n     = ""
-        co_pr_v     = ""
-        co_pr_ils   = ""
-        co_pa_j     = ""
-        co_pa_t     = ""
-        co_pa_il    = ""
-        co_pa_n     = ""
-        co_pa_v     = ""
-        co_pa_ils   = "" />
+        co_pr_j     = "pourvoirais"
+        co_pr_t     = "pourvoirais"
+        co_pr_il    = "pourvoirait"
+        co_pr_n     = "pourvoirions"
+        co_pr_v     = "pourvoiriez"
+        co_pr_ils   = "pourvoiraient"
+        co_pa_j     = "aurais pourvu"
+        co_pa_t     = "aurais pourvu"
+        co_pa_il    = "aurait pourvu"
+        co_pa_n     = "aurions pourvu"
+        co_pa_v     = "auriez pourvu"
+        co_pa_ils   = "auraient pourvu" />
     <conjugation
         id          = "43"
         term        = ""
-        inf_pr      = ""
+        inf_pr      = "savoir"
         inf_pa      = ""
         pa_pr       = ""
         pa_pa1      = ""
@@ -4243,7 +4243,7 @@
     <conjugation
         id          = "44"
         term        = ""
-        inf_pr      = ""
+        inf_pr      = "devoir"
         inf_pa      = ""
         pa_pr       = ""
         pa_pa1      = ""
@@ -4346,7 +4346,7 @@
     <conjugation
         id          = "45"
         term        = ""
-        inf_pr      = ""
+        inf_pr      = "pouvoir"
         inf_pa      = ""
         pa_pr       = ""
         pa_pa1      = ""
@@ -4449,7 +4449,7 @@
     <conjugation
         id          = "46"
         term        = ""
-        inf_pr      = ""
+        inf_pr      = "mouvoir"
         inf_pa      = ""
         pa_pr       = ""
         pa_pa1      = ""
@@ -4552,7 +4552,7 @@
     <conjugation
         id          = "47"
         term        = ""
-        inf_pr      = ""
+        inf_pr      = "pleuvoir"
         inf_pa      = ""
         pa_pr       = ""
         pa_pa1      = ""
@@ -4655,7 +4655,7 @@
     <conjugation
         id          = "48"
         term        = ""
-        inf_pr      = ""
+        inf_pr      = "falloir"
         inf_pa      = ""
         pa_pr       = ""
         pa_pa1      = ""
@@ -4758,7 +4758,7 @@
     <conjugation
         id          = "49"
         term        = ""
-        inf_pr      = ""
+        inf_pr      = "valoir"
         inf_pa      = ""
         pa_pr       = ""
         pa_pa1      = ""
